fixed error when nothing passed to gantt

--- a/createjsons.ipynb
+++ b/createjsons.ipynb
@@ -10,6 +10,8 @@
     "import requests,json,os, pprint,requests\n",
     "import pandas as pd\n",
     "from datetime import date,datetime,timedelta\n",
+    "import copy\n",
+    "\n",
     "\n",
     "configurationfile = './configuration/configuration.txt'\n",
     "credentialsfile = './configuration/credentials.txt'\n",
@@ -443,23 +445,36 @@
     "        \n",
     "epicdates = {}\n",
     "for i,j in epics.items():\n",
-    "    epicdates[i] = {'Starts': [], 'Ends': []}\n",
+    "    epicdates[i] = {'Starts': [], 'Ends': [], 'hours': 0}\n",
     "    for k,l in kaarten.items():\n",
     "        if i == l['epicid']:\n",
     "            if l[config.get('Custom Field for Starting date')] != None:\n",
     "                epicdates[i]['Starts'].append(l[config.get('Custom Field for Starting date')])\n",
     "            if l['Einddatum'] != None:\n",
     "                epicdates[i]['Ends'].append(l[config.get('Custom Field for Ending date')])\n",
+    "            try:\n",
+    "                epicdates[i]['hours'] += int(l['Geplande uren'])\n",
+    "            except:\n",
+    "                pass\n",
     "    if epicdates[i]['Starts'] != []:\n",
     "        epicdates[i]['Starts'] = min(epicdates[i]['Starts'])\n",
+    "    else:\n",
+    "        epicdates[i]['Starts'] = None\n",
     "    if epicdates[i]['Ends'] != []:\n",
     "        epicdates[i]['Ends'] = max (epicdates[i]['Ends'])\n",
-    "        \n",
+    "    else:\n",
+    "        epicdates[i]['Ends'] = None        \n",
     "for i,j in epics.items():\n",
     "    for k,l in epicdates.items():\n",
     "        if i == k:\n",
     "            j['Begindatum'] = l['Starts']\n",
-    "            j['Einddatum'] = l['Ends']         \n"
+    "            j['Einddatum'] = l['Ends'] \n",
+    "            j['Geplande uren'] = l['hours']\n",
+    "\n",
+    "jsonforallepics = copy.deepcopy(epics)\n",
+    "\n",
+    "\n",
+    " \n"
    ]
   },
   {
@@ -960,6 +975,24 @@
     "        else:\n",
     "            jsoncards[i][k] = l\n",
     "\n",
+    "jsonallepics = {}\n",
+    "for i,j in jsonforallepics.items():\n",
+    "    try:\n",
+    "        del j['listmovements']\n",
+    "    except:\n",
+    "        pass\n",
+    "    try:\n",
+    "        del j['movements']\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "    jsonallepics[i] = {}\n",
+    "    for k,l in j.items():\n",
+    "        if type(l) == datetime:\n",
+    "            jsonallepics[i][k] = 'date, ' + l.strftime(\"%Y-%m-%d, %H:%M:%S\")\n",
+    "        else:\n",
+    "            jsonallepics[i][k] = l   \n",
+    "            \n",
     "def dumpjson(file, data):\n",
     "    with open('./data/'+file, 'w') as outfile:\n",
     "        json.dump(data, outfile, sort_keys=True) \n",
@@ -975,7 +1008,7 @@
     "dumpjson('allcards.json',jsonallcards)\n",
     "dumpjson('statuses.json',jsonstatuses)\n",
     "dumpjson('meta.json',jsonmeta)\n",
-    "\n",
+    "dumpjson('allepics.json',jsonallepics)\n",
     "\n",
     "\n",
     "string = datetime.now().strftime(\"%Y-%m-%d, %H:%M:%S\")\n",
