added script to archive Done cards

--- a/createjsons.ipynb
+++ b/createjsons.ipynb
@@ -438,6 +438,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for i,j in kaarten.items():\n",
+    "    j['datedone'] = None\n",
+    "    j['datestarted'] = None\n",
+    "    j['datelastblocked'] = None\n",
+    "    j['datelastunblocked'] = None\n",
+    "\n",
+    "    if j['status'] == 'Done':\n",
+    "        tmp = []\n",
+    "        for k,l in j['movements'].items():\n",
+    "            if l['listAfter'] in config['Done']:\n",
+    "                tmp.append(k)\n",
+    "        j['datedone'] = max(tmp)\n",
+    "\n",
+    "    if j['status'] != 'Done' or 'Archived':\n",
+    "        tmp = []\n",
+    "        for k,l in j['movements'].items():\n",
+    "            if l['listAfter'] in config['Doing']:\n",
+    "                tmp.append(k)\n",
+    "        if tmp != []:\n",
+    "            j['datestarted'] = min(tmp)\n",
+    "\n",
+    "    if j['datestarted'] == None:\n",
+    "        if j['status'] != 'Archived':\n",
+    "            if j['status'] != 'Not started':\n",
+    "                j['datestarted'] = j['created']\n",
+    "    tmp = []\n",
+    "    if j['status'] != 'Blocked':\n",
+    "        for k,l in j['movements'].items():\n",
+    "            if l['listBefore'] in config['Blocked']:\n",
+    "                tmp.append(k)\n",
+    "                j['datelastunblocked'] = max(tmp)\n",
+    "    tmp = []\n",
+    "    for k,l in j['movements'].items():\n",
+    "        if l['listAfter'] in config['Blocked']:\n",
+    "            tmp.append(k)\n",
+    "            j['datelastblocked'] = max(tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "epics = {}\n",
     "for i,j in kaarten.items():\n",
     "    if j['list'] in config.get('Epics') or j['list'] in config.get('List with Epics Done'):\n",
@@ -584,13 +628,6 @@
     "for i in cardstodelete:\n",
     "    del jsonallcards[i]        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
