cleaned up code in createfolder()

--- a/createjsons.ipynb
+++ b/createjsons.ipynb
@@ -16,11 +16,11 @@
     "\n",
     "def createfolders():\n",
     "    try:\n",
-    "        temp = os.stat('./configuration')\n",
+    "        os.stat('./configuration')\n",
     "    except:\n",
     "        os.mkdir('./configuration')\n",
     "    try:\n",
-    "        temp = os.stat('./data')\n",
+    "        os.stat('./data')\n",
     "    except:\n",
     "        os.mkdir('./data')\n",
     "createfolders()\n",
@@ -987,9 +987,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "trello",
+   "display_name": "Python 3.8.2 64-bit ('trellodash': conda)",
    "language": "python",
-   "name": "trello"
+   "name": "python38264bittrellodashconda9cdbeace376549ba8d9f301842b743fb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1001,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
